--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="script.js"></script>
+    <script src="scriptFix.js"></script>
   </body>
 </html>
